[package]
name = "jsondata"
version = "0.7.0"
description = "JSON processing package for document databases"
repository = "https://github.com/bnclabs/jsondata"
documentation = "https://docs.rs/jsondata"
keywords = ["json", "json5"]
categories = ["parsing", "encoding"]
authors = ["prataprc <prataprc@gmail.com>"]
license = "MIT"
edition = "2018"
readme = "README.md"
exclude = ["template/**"]

[profile.release]
debug = true

[profile.bench]
debug = true

[dependencies]
lazy_static = "1.2.0"
unicode_reader = "0.1.1"
jsondata-derive = { path = "jsondata-derive", version = "=0.1.0"}

[dev-dependencies]
quickcheck = "0.7"

[badges]
maintenance = { status = "actively-developed" }
travis-ci = { repository = "bnclabs/jsondata" }

[[example]]
name = "macro"
crate-type = ["bin"]
