[package]
name = "jsondata-derive"
version = "0.1.0"
description = "Macros for jsondata types"
repository = "https://github.com/bnclabs/jsondata"
documentation = "https://docs.rs/jsondata"
keywords = ["json", "json5"]
categories = ["parsing", "encoding"]
authors = ["prataprc <prataprc@gmail.com>"]
license = "MIT"
edition = "2018"
readme = "../README.md"

[profile.release]
debug = true

[profile.bench]
debug = true

[dependencies]
syn = { version = "1", features = ["full"] }
quote = "1"
proc-macro2 = "1"
heck = "0.3.0"
proc-macro-error = "0.4.7"

[lib]
proc-macro = true
